# us-congress-pizza-flag-tracker

./: .env.example  .env.example.mysql  .env.example.postgres  .gitignore  .gitmodules  .gitpod.yml  AuthActions.py  AuthController.py  AuthPrivileges.py  LICENSE.md  OfficeActions.py  OfficeController.py  OrderActions.py  OrderController.py  OrderTransactions.py  Procfile  StatusActions.py  StatusController.py  Test.py  UserActions.py  UserController.py  app.json  app.py  authorize.py  check_continue.sh  config.py  config2.py  controllers.py  create_offices_json.py  error_handler.py  example-co-authored.txt  flag.db-journal  gitpod_init.sh  hello_add.py  home_office_codes.json  init_app_close_db.py  init_conda.sh  init_conda_and_refresh.sh  init_db.py  init_python.sh  (+36 more)
data/: create_offices_json.py  fed_users_order_privs.json  office_codes.json  statuses.json  users.json
flag/: orders.py
initial_data/: create_offices_json.py  init_office_table.py  init_orders_table.py  init_status_table.py  init_user_table.py  office_codes.json  statuses.json
migrations/: env.py
setup/: check_continue.sh  create_python_env.sh  db_schema.sh  execute_step.sh  gitpod_init.sh  migrate_schema_model.sh  setup.sh  start.sh  uppercase.sh
src/: WebController.py  error_handler.py  populate_seed_data.py  postgress_setup.sql  routes.py  util.py
templates/: index.html
tests/: __init__.py  auth_helper.py  conftest.py  mock_auth_controller.py  mock_auth_privileges.py  mock_request.py  mocking_helper.py  pytest.ini  test_helper.py  test_mocking_constant_mocker.py  test_offices.py  test_util.py  (+3 more)
(+90 files in other folders)
