[tool.poetry]
name = "spa-with-heroku"
version = "0.1.0"
description = ""
authors = ["Karl Sutt <karl@sutt.ee>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
